--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -1,1 +1,3 @@
 PORT=8080
+SECRET_SESSION=ICMNDSKFNDHFR
+MONGO=mongodb+srv://micaoggero17:lScrBJKESna5DDYv@cluster0.qy9szah.mongodb.net/ProyectoFinal?retryWrites=true&w=majority&appName=Cluster0
