--- a/Backend/src/package.json
+++ b/Backend/src/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1"
   }
