endpoints REST projects y users

--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -1,3 +1,4 @@
 PORT=8080
 SECRET_SESSION=ICMNDSKFNDHFR
 MONGO=mongodb+srv://micaoggero17:lScrBJKESna5DDYv@cluster0.qy9szah.mongodb.net/ProyectoFinal?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=mi_clave_super_secreta
