--- a/Backend/src/package.json
+++ b/Backend/src/package.json
@@ -11,23 +11,24 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
+    "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^17.1.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.17.0",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-oauth2": "^1.8.0"
-  }
+  },
+  "description": ""
 }
