--- a/Backend/src/package.json
+++ b/Backend/src/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -28,6 +29,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0"
   },
   "description": ""
